--- a/src/Components/Projects/Projects.css
+++ b/src/Components/Projects/Projects.css
@@ -12,15 +12,50 @@
   box-shadow: red 0px 0px 2px 2px;
   border-radius: 4px;
   width: 90%;
+  padding: 16px;
 }
 
+.project-content {
+  display: flex;
+  flex-direction: column;
+}
+.project-info {
+  padding: 0px 16px 0px 16px;
+}
 .project-title {
   width: 100%;
   text-align: center;
 }
 
+.link-btn {
+  border-radius: 6px;
+  padding: 8px 16px 8px 16px;
+  border-style: solid;
+  border-width: 1px;
+  transition: 0.4s;
+  background-color: transparent;
+  display: block;
+  text-align: center;
+  width: 120px;
+  margin-bottom: 16px;
+  white-space: nowrap;
+  text-decoration: none;
+  color: slategray;
+}
+
+.link-btn:hover {
+  background-color: pink;
+}
+
 @media only screen and (max-width: 800px) {
   .projects-container {
     background-color: yellow;
+  }
+}
+
+@media only screen and (min-width: 1200px) {
+  .project-content {
+    display: grid;
+    grid-template-columns: 50% 50%;
   }
 }
