--- a/src/Components/Projects/ImageRevolver/ImageRevolver.css
+++ b/src/Components/Projects/ImageRevolver/ImageRevolver.css
@@ -3,8 +3,7 @@
   flex-direction: column;
   align-items: center;
   position: relative;
-  width: 100%;
-  overflow: hidden;
+  justify-content: center;
 }
 
 .revolver {
