--- a/src/Components/Projects/Projects.css
+++ b/src/Components/Projects/Projects.css
@@ -1,18 +1,17 @@
 .projects-container {
   display: flex;
-  background-color: blueviolet;
   flex-direction: column;
   align-items: center;
   flex-grow: 1;
 }
 
 .Project {
-  display: flex;
   flex-direction: column;
-  box-shadow: red 0px 0px 2px 2px;
+  box-shadow: rgba(200, 200, 200, 0.3) 0px 0px 3px 3px;
   border-radius: 4px;
   width: 90%;
   padding: 16px;
+  margin-bottom: 32px;
 }
 
 .project-content {
@@ -49,7 +48,6 @@
 
 @media only screen and (max-width: 800px) {
   .projects-container {
-    background-color: yellow;
   }
 }
 
