--- a/src/Components/SideMenu/SideMenu.css
+++ b/src/Components/SideMenu/SideMenu.css
@@ -1,13 +1,19 @@
+.sticky-container {
+}
+
 .side-menu-container {
+  position: sticky;
+  overflow-y: auto;
+  top: 0px;
   display: flex;
   flex-direction: column;
   padding: 32px;
-  background-color: green;
+  height: 100vh;
 }
 
 #me {
-  width: 200px;
-  height: 200px;
+  width: 100px;
+  height: 100px;
   border-radius: 50%;
   background-color: aqua;
   transition: 0.4s;
@@ -36,9 +42,17 @@
 
 @media only screen and (max-width: 800px) {
   .side-menu-container {
-    background-color: pink;
     flex-grow: 1;
+    position: relative;
+    height: fit-content;
+    overflow-y: visible;
     text-align: center;
     align-items: center;
+    border-bottom-style: solid;
+    border-bottom-width: 1px;
+    border-bottom-color: lightblue;
+  }
+  .sns {
+    margin-bottom: 0px;
   }
 }
