--- a/src/Components/Projects/Projects.css
+++ b/src/Components/Projects/Projects.css
@@ -46,6 +46,12 @@
   background-color: pink;
 }
 
+.youtube-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 @media only screen and (max-width: 800px) {
   .projects-container {
   }
